facet-derive-emit/tests/snapshots/codegen__record_struct_generic.snap
---
source: facet-derive-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct Blah<'a, T: Facet + core::hash::Hash, const C: usize = 3>\n        where\n            T: Debug, // Added a Debug bound for demonstration if needed, adjust as per Facet constraints\n        {\n            field: core::marker::PhantomData<&'a T>,\n            another: T,\n            constant_val: [u8; C],\n        }\n        \"#)"
---
#[automatically_derived]
unsafe impl<'a, T: Facet + core::hash::Hash, const C: usize> ::facet::Facet for Blah<'a, T, C>
where
    T: Debug,
    T: ::facet::Facet,
{
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("field")
                    .shape(|| ::facet::shape_of(&|s: &Blah<'a, T, C>| &s.field))
                    .offset(::core::mem::offset_of!(Blah<'a, T, C>, field))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[])
                    .build(),
                ::facet::Field::builder()
                    .name("another")
                    .shape(|| ::facet::shape_of(&|s: &Blah<'a, T, C>| &s.another))
                    .offset(::core::mem::offset_of!(Blah<'a, T, C>, another))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[])
                    .build(),
                ::facet::Field::builder()
                    .name("constant_val")
                    .shape(|| ::facet::shape_of(&|s: &Blah<'a, T, C>| &s.constant_val))
                    .offset(::core::mem::offset_of!(Blah<'a, T, C>, constant_val))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[])
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f, "Blah"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::Struct::builder()
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
