facet-derive-emit/tests/snapshots/codegen__struct_impls_drop.snap
---
source: facet-derive-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        struct BarFoo {\n            bar: u32,\n            foo: String,\n        }\n        // The Drop impl doesn't affect the derive macro input:\n        // impl Drop for BarFoo { fn drop(&mut self) {} }\n        \"#)"
---
#[used]
static BAR_FOO_SHAPE: &'static ::facet::Shape = <BarFoo as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl ::facet::Facet for BarFoo {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("bar")
                    .shape(|| ::facet::shape_of(&|s: &BarFoo| &s.bar))
                    .offset(::core::mem::offset_of!(BarFoo, bar))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[])
                    .build(),
                ::facet::Field::builder()
                    .name("foo")
                    .shape(|| ::facet::shape_of(&|s: &BarFoo| &s.foo))
                    .offset(::core::mem::offset_of!(BarFoo, foo))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&[])
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f, "BarFoo"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::Struct::builder()
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
